--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,9 @@ dependencies:
   flutter:
     sdk: flutter
 
+  http: ^0.13.4
+  html: ^0.15.0
+  flutter_inappwebview: ^5.7.2+3
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -60,7 +63,7 @@ flutter_icons:
   android: "launcher_icon"
   ios: true
   image_path: "assets/icons/app-icon.png"
-  min_sdk_android: 21 # android min sdk min:16, default 21
+  min_sdk_android: 32 # android min sdk min:16, default 21
   web:
     generate: true
     image_path: "assets/icons/app-icon.png"
