--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,10 +35,12 @@ dependencies:
   http: ^0.13.4
   html: ^0.15.0
   flutter_inappwebview: ^5.7.2+3
+  footer: ^0.0.4
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  flutter_svg: ^2.0.7
 
 dev_dependencies:
   flutter_test:
@@ -53,29 +55,29 @@ dev_dependencies:
   flutter_launcher_icons: ^0.11.0
   flutter_native_splash: ^2.2.16
 
-flutter_native_splash:
-  color: "#ffffff"
-  image: "assets/icons/logo.png"
-  android: true
-  ios: true
+#flutter_native_splash:
+#  color: "#ffffff"
+#  image: "assets/icons/chef-hat-logo_grey.svg"
+#  android: true
+#  ios: true
 
 flutter_icons:
   android: "launcher_icon"
   ios: true
-  image_path: "assets/icons/app-icon.png"
+  image_path: "assets/icons/launcher_icon.png"
   min_sdk_android: 32 # android min sdk min:16, default 21
   web:
     generate: true
-    image_path: "assets/icons/app-icon.png"
+    image_path: "assets/icons/launcher_icon.png"
     background_color: "#hexcode"
     theme_color: "#hexcode"
   windows:
     generate: true
-    image_path: "assets/icons/app-icon.png"
+    image_path: "assets/icons/launcher_icon.png"
     icon_size: 48 # min:48, max:256, default: 48
   macos:
     generate: true
-    image_path: "assets/icons/app-icon.png"
+    image_path: "assets/icons/launcher_icon.png"
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
@@ -91,6 +93,8 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/icons/
+    - assets/images/cookbook.png
+    - assets/images/test.png
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
@@ -106,9 +110,14 @@ flutter:
   # list giving the asset and other descriptors for the font. For
   # example:
   fonts:
-    - family:  MyFlutterApp
+    - family: Uber
       fonts:
-        - asset: fonts/MyFlutterApp.ttf
+        - asset: assets/fonts/UberMoveBold.otf
+        - asset: assets/fonts/UberMoveMedium.otf
+#    - family: MyFlutterApp
+#      fonts:
+#        - asset: fonts/MyFlutterApp.ttf
+#                   - asset: fonts/UberMoveBold.otf
   # fonts:
   #   - family: Schyler
   #     fonts:
